Enable allow_world_readable_tmpfiles

--- a/automation/ansible.cfg
+++ b/automation/ansible.cfg
@@ -1,14 +1,14 @@
 [defaults]
 forks = 10
 inventory = ./inventory
-use_persistent_connections = True
+use_persistent_connections = true
 remote_tmp = /tmp/${USER}/ansible
-allow_world_readable_tmpfiles = false # or "true" if the temporary directory on the remote host is mounted with POSIX acls disabled or the remote machines use ZFS.
-host_key_checking = False
+allow_world_readable_tmpfiles = true # or "true" if the temporary directory on the remote host is mounted with POSIX acls disabled or the remote machines use ZFS.
+host_key_checking = false
 timeout = 60
-deprecation_warnings = False
-display_skipped_hosts = False
-localhost_warning = False
+deprecation_warnings = false
+display_skipped_hosts = false
+localhost_warning = false
 stdout_callback = default
 # Define the directory for custom callback plugins
 callback_plugins = ./plugins/callback
@@ -18,7 +18,7 @@ interpreter_python = auto_silent
 
 [ssh_connection]
 ssh_args = -o Ciphers=aes128-ctr -o MACs=hmac-sha2-256 -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=3 -o ServerAliveInterval=5 -o ServerAliveCountMax=10
-pipelining = True
+pipelining = true
 
 [persistent_connection]
 retries = 3
