--- a/automation/ansible.cfg
+++ b/automation/ansible.cfg
@@ -3,7 +3,7 @@ forks = 10
 inventory = ./inventory
 use_persistent_connections = true
 remote_tmp = /tmp/${USER}/ansible
-allow_world_readable_tmpfiles = true # or "true" if the temporary directory on the remote host is mounted with POSIX acls disabled or the remote machines use ZFS.
+allow_world_readable_tmpfiles = false # or "true" if the temporary directory on the remote host is mounted with POSIX acls disabled or the remote machines use ZFS.
 host_key_checking = false
 timeout = 60
 deprecation_warnings = false
